--- a/app/core/templates/core/blendschedules/horixschedule.html
+++ b/app/core/templates/core/blendschedules/horixschedule.html
@@ -9,6 +9,7 @@
                     <th scope="col">Description</th>
                     <th scope="col">Blend Qty</th>
                     <th scope="col">Run Date</th>
+                    <th scope="col">Lot Number</th>
                     {% if user.is_staff %}<th scope="col">Create Lot Number</th>{% endif %}
                 </tr>
             </thead>
@@ -20,6 +21,7 @@
                     <td>{{ item.component_item_description }}</td>
                     <td>{{ item.amt }}</td>
                     <td>{{ item.run_date|date:"m/d/Y" }}</td>
+                    <td>{{ item.lot_number }}</td>
                     {% if user.is_staff %}
                         <td class="text-center lotNumCell">
                             <button class="btn btn-secondary lotNumButton" data-desk="Horix"
