Update drum scheduling page.

--- a/app/core/templates/core/blendschedules/drumschedule.html
+++ b/app/core/templates/core/blendschedules/drumschedule.html
@@ -8,7 +8,8 @@
                     <th scope="col">Blend</th>
                     <th scope="col">Description</th>
                     <th scope="col">Total Blend Qty</th>
-                    <th scope="col">Start Time</th>
+                    <th scope="col">Run Date</th>
+                    <th scope="col">Lot Number</th>
                     {% if user.is_staff %}<th scope="col">Create Lot Number</th>{% endif %}
                 </tr>
             </thead>
@@ -20,11 +21,12 @@
                     <td>{{ item.component_item_description }}</td>
                     <td>{{ item.amt }}</td>
                     <td>{{ item.run_date|date:"m/d/Y" }}</td>
+                    <td>{{ item.lot_number }}</td>
                     {% if user.is_staff %}
                         <td class="text-center lotNumCell">
-                            <button class="btn btn-secondary lotNumButton" data-desk="Horix"
+                            <button class="btn btn-secondary lotNumButton" data-desk="Desk_1"
                             data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
-                            data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" 
+                            data-line="Dm" data-rundate="{{ item.run_date|date:"m/d/Y" }}" 
                             data-itemcode="{{ item.component_item_code }}" 
                             data-desc="{{ item.component_item_description }}" 
                             data-totalqty="{{ item.amt }}"
