Update rail and truck page.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -19,6 +19,7 @@
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/display-ghs-label-search">GHS Labels</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
+        <li><a class="dropdown-item" href="/core/truck-rail-material-schedule">Truck & Rail Schedule</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">All Scheduled Blends</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Desk_1">Desk 1</a></li>
