Modify reports and blendshortages.

--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -83,6 +83,7 @@
                                     </a></li>
                                 </ul>
                                 {{ item.component_item_code }}
+                                <p style="display:none;">{{ item.ingredients_list }}</p>
                                 {% if item.shortage_flag_list %}
                                     <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" style="color:red">
                                         short
