--- a/app/core/templates/core/blendschedules/horixschedule.html
+++ b/app/core/templates/core/blendschedules/horixschedule.html
@@ -9,22 +9,21 @@
                     <th scope="col">Description</th>
                     <th scope="col">Blend Qty</th>
                     <th scope="col">Run Date</th>
-                    {% comment %} <th scope="col">Lot Number</th>
-                    <th scope="col">Lot Qty</th> {% endcomment %}
+                    <th scope="col">Lot Number</th>
+                    <th scope="col">Lot Qty</th>
                     {% if user.is_staff %}<th scope="col">Create Lot Number</th>{% endif %}
                 </tr>
             </thead>
             {% for item in horix_blends %}
-                {% comment %} <tr {% if item.problem == 'QuantityMismatch' %} class="problemRow"{% endif %}> {% endcomment %}
-                <tr>
+                <tr {% if not item.lot_number == 'Not found.' and not item.lot_quantity == item.amt %} class="problemRow" {% elif item.lot_number == 'Not found.' %} class="noLotNumRow" {% endif %}>
                     <td>{{ item.item_code }}</td>
                     <td>{{ item.po_number }}</td>
                     <td>{{ item.component_item_code }}</td>
                     <td>{{ item.component_item_description }}</td>
                     <td>{{ item.amt }}</td>
                     <td>{{ item.run_date|date:"m/d/Y" }}</td>
-                    {% comment %} <td>{{ item.lot_number }}</td>
-                    <td>{{ item.lot_quantity|floatformat:0 }}</td> {% endcomment %}
+                    <td>{{ item.lot_number }}</td>
+                    <td>{{ item.lot_quantity|floatformat:0 }}</td>
                     {% if user.is_staff %}
                         <td class="text-center lotNumCell">
                             <button class="btn btn-secondary lotNumButton" data-desk="Horix"
