--- a/app/core/templates/core/blendschedules/toteschedule.html
+++ b/app/core/templates/core/blendschedules/toteschedule.html
@@ -8,23 +8,27 @@
                     <th scope="col">Blend</th>
                     <th scope="col">Description</th>
                     <th scope="col">Total Blend Qty</th>
-                    <th scope="col">Start Time</th>
+                    <th scope="col">Run Date</th>
+                    <th scope="col">Lot Number</th>
+                    <th scope="col">Lot Qty</th>
                     {% if user.is_staff %}<th scope="col">Create Lot Number</th>{% endif %}
                 </tr>
             </thead>
             {% for item in tote_blends %}
-                <tr>
+                <tr {% if not item.lot_number == 'Not found.' and not item.lot_quantity == item.amt %} class="problemRow" {% elif item.lot_number == 'Not found.' %} class="noLotNumRow" {% endif %}>
                     <td>{{ item.item_code }}</td>
                     <td>{{ item.po_number }}</td>
                     <td>{{ item.component_item_code }}</td>
                     <td>{{ item.component_item_description }}</td>
                     <td>{{ item.amt }}</td>
                     <td>{{ item.run_date|date:"m/d/Y" }}</td>
+                    <td>{{ item.lot_number }}</td>
+                    <td>{{ item.lot_quantity|floatformat:0 }}</td>
                     {% if user.is_staff %}
                         <td class="text-center lotNumCell">
-                            <button class="btn btn-secondary lotNumButton" data-desk="Horix"
+                            <button class="btn btn-secondary lotNumButton" data-desk="Desk_1"
                             data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
-                            data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" 
+                            data-line="Dm" data-rundate="{{ item.run_date|date:"m/d/Y" }}" 
                             data-itemcode="{{ item.component_item_code }}" 
                             data-desc="{{ item.component_item_description }}" 
                             data-totalqty="{{ item.amt }}"
