--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -26,6 +26,7 @@
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Desk_2">Desk 2</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Hx">Horix</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Dm">Drums</a></li>
+        <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Totes">Totes</a></li>
     </ul>
 </li>
 <li class="nav-item dropdown" id="inventoryDropdown">
