--- a/app/core/templates/core/inventorycounts/upcomingcomponents.html
+++ b/app/core/templates/core/inventorycounts/upcomingcomponents.html
@@ -20,19 +20,20 @@
         <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
-                    {% if user.is_staff %}<th scope="col" class='text-center'>Add to Count List</th>{% endif %}
+                    {% if user.is_staff %}<th scope="col" class='text-center'></th>{% endif %}
                     <th scope="col" class='text-center'>Item Code</th>
                     <th scope="col" class='text-center'>Description</th>
-                    <th scope="col" class='text-center'>Exp. Qty</th>
+                    <th scope="col" class='text-center'>Last Adjustment</th>
                     <th scope="col" class='text-center'>Last Count</th>
-                    <th scope="col" class='text-center'>Last Transaction</th>
                 </tr>
             </thead>
-            {% for item in upcoming_runs %}
+            {% for item in upcoming_components %}
                 <tr {% if item.needs_count %} style="background-color:rgb(250, 189, 109)" {% endif %}>
-                    <td class='text-center'>
-                        <input type="checkbox" itemcode="{{ item.item_code }}" name="{{ item.item_code }}" class="checkbox"></input>
-                    </td>
+                    {% if user.is_staff %}
+                        <td class='text-center'>
+                            <input type="checkbox" itemcode="{{ item.item_code }}" name="{{ item.item_code }}" class="checkbox"></input>
+                        </td>
+                    {% endif %}
                     <td>
                         <div class="dropdown">
                             <button class="btn dropdown-toggle blendinfo" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -50,9 +51,8 @@
                         </div>
                     </td>
                     <td>{{ item.item_description }}</td>
-                    <td>{{ item.expected_quantity|floatformat:2 }}</td>
-                    <td>{{ item.last_count_quantity|floatformat:0 }}: {{ item.last_count_date|date:"m-d-y" }}</td>
-                    <td>{{ item.last_transaction_code }}: {{ item.last_transaction_date|date:"m-d-y" }}</td>
+                    <td><span title="Qty: {{ item.last_transaction_qty|floatformat:2 }}">{{ item.last_adjustment_date|date:"m-d-y" }}: {{ item.last_adjustment_code }}</span></td>
+                    <td><span title="Qty: {{ item.last_count_qty|floatformat:2 }}">{{ item.last_count_date|date:"m-d-y" }}</span></td>
                 </tr>                
             {% endfor %}
         </table>
