Update container labelling.

--- a/app/core/static/core/css/countlist.css
+++ b/app/core/static/core/css/countlist.css
@@ -130,6 +130,9 @@ td[class*="counted_quantity"]{
     background: lightcoral;
 }
 
+.partialContainerLabelLink {
+    cursor: pointer;
+}
 
 @media print {
     .site-header {
