--- a/app/core/static/core/css/partialContainerLabel.css
+++ b/app/core/static/core/css/partialContainerLabel.css
@@ -15,6 +15,26 @@
     width: 85%;
 }
 
+#closeModalButton {
+    background: none;
+    color: rgb(128, 128, 128);
+    border: 2px solid rgb(128, 128, 128);
+    font-size: 1.5em;
+    cursor: pointer;
+    border-radius: 9px;
+    position: absolute;
+    top: 0; /* Aligns to the top of the purple box */
+    right: 0;
+    margin: 5px;
+    padding-top: 0px;
+}
+
+#closeModalButton:hover {
+    background: rgb(128, 128, 128);
+    color: white;
+    border: 2px solid white;
+}
+
 #initialsField {
     height: 20px;
     width: 50px;
