implement websocket for carton print status

--- a/app/prodverse/static/prodverse/css/productionSchedule.css
+++ b/app/prodverse/static/prodverse/css/productionSchedule.css
@@ -12,14 +12,14 @@ a {
 }
 
 .carton-printed {
-    background-color: #f5e8d3; /* Light brown base */
+    background-color: #f5e8d3 !important; /* Light brown base */ 
     background-image: repeating-linear-gradient(
         45deg,
         rgba(139, 69, 19, 0.1), /* Darker brown, low opacity */
         rgba(139, 69, 19, 0.1) 10px,
         transparent 10px,
         transparent 20px
-    );
+    ) !important;
 }
 
 .container {
