Fix the pagination buttons on countlist pages.

--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -75,10 +75,10 @@
     </div>
     <div id="page-links" class='text-center'>
         {% if current_page.has_previous %}
-            <a href="/core/count-records?recordType=blend&page={{ current_page.previous_page_number }}">Previous Page</a>
+            <a href="/core/count-records?recordType={{ countType }}&page={{ current_page.previous_page_number }}">Previous Page</a>
         {% endif %}
         {% if current_page.has_next %}
-            <a href="/core/count-records?recordType=blend&page={{ current_page.next_page_number }}">Next Page</a>
+            <a href="/core/count-records?recordType={{ countType }}&page={{ current_page.next_page_number }}">Next Page</a>
         {% endif %}
         <div>
             Page {{ current_page.number }} of {{ current_page.paginator.num_pages }}
