--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -44,6 +44,8 @@
         <li><a class="dropdown-item" href="/core/count-records?recordType=blend">View All Blend Counts</a></li>
         <li><a class="dropdown-item" href="/core/count-records?recordType=blendcomponent">View All Blend Component Counts</a></li>
         <li><a class="dropdown-item" href="/core/display-count-collection-links">Count Links</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="/core/display-partial-container-label">Print Partial Container Label</a></li>
     </ul>
 </li>
 <li class="nav-item dropdown">
