--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -26,6 +26,8 @@
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Hx">Horix</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Dm">Drums</a></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Totes">Totes</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="/core/display-partial-container-label">Print Partial Container Label</a></li>
     </ul>
 </li>
 <li class="nav-item">
