Sockets added it.

--- a/app/core/templates/core/inventorycounts/countcollectionlinks.html
+++ b/app/core/templates/core/inventorycounts/countcollectionlinks.html
@@ -19,7 +19,7 @@
                     </tr>
                 </thead>
         {% for item in count_collection_links %}
-            <tr class="tableBodyRow">
+            <tr class="tableBodyRow" collectionlinkitemid="{{ item.id }}">
                 <td style="display:none;">{{ item.link_order }}</td>
                 <td data-collection-id="{{ item.collection_id }}">
                     {% if user.is_staff %}
@@ -32,9 +32,9 @@
                 {% if user.is_staff %}
                     <td><a href="{{ item.collection_link }}">Enter Counts >></a></td>
                     <td class="text-center">
-                        <a href="/core/delete-count-collection-links?list=[{{ item.id }}]" type="button" class="btn btn-outline-danger deleteBtn">
-                            <i class="fa fa-trash" disabled="disabled"></i>
-                        </a>
+                        {% comment %} <a href="/core/delete-count-collection-links?list=[{{ item.id }}]" type="button" class="btn btn-outline-danger deleteBtn"> {% endcomment %}
+                        <i class="fa fa-trash btn btn-outline-danger deleteCountLinkButton" collectionlinkitemid="{{ item.id }}"  disabled="disabled"></i>
+                        {% comment %} </a> {% endcomment %}
                     </td>
                 {% endif %}
             </tr>
