--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -14,118 +14,115 @@
     </dialog>
     
     <div>
-        <form id="countListForm" action="" method=POST>
-            <div class="text-center buttonContainer noPrint">
-                <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save</button>
-            </div>
-            <div class="success-message text-center">
-                <h2 class="fade-out fade-hidden">
-                    {% if result == 'success' %}
-                        Counts submitted successfully!
-                    {% endif %}
-                </h2>
-            </div>
-            {% csrf_token %}
-            <div class="table-responsive-sm">
-                <table class="table text-left table-bordered table-hover" id="countsTable">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th scope="col" class="text-center">Item Code</th>
-                            <th scope="col" class="text-center">Description</th>
-                            <th scope="col" class="text-center">Exp. Qty</th>
-                            <th scope="col" class="text-center">Count</th>
-                            {% if user.is_staff %}
-                                <th scope="col" class="noPrint text-nowrap" style="display:flex;">
-                                    Count Date
-                                    <div class="dropdown">
-                                        <button class="btn dropdown-toggle datechangedropdown" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                        </button>
-                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            <li id="changeDatesButton"><a class="dropdown-item">Change Dates to Today</a></li>
-                                        </ul>
-                                    </div>
-                                </th>
-                            {% endif %}
-                            <th scope="col" class="noPrint text-center">Variance</th>
-                            <th scope="col" class="noPrint text-center">Approved</th>
-                            <th scope="col" class="noPrint text-center">Comment</th>
-                            <th scope="col" class="noPrint text-center">Zone</th>
-                            <th scope="col" class="noPrint text-center">Location</th>
-                            {% if user.is_staff %}
-                                <th scope="col" class="noPrint text-center text-nowrap">
-                                    {% if user.is_staff %}
-                                        <a class="discardButton" id="discardAllButton" href="" style="color:white;border:2px solid white;">
-                                            Delete All
-                                        </a>
-                                    {% endif %}
-                                </th>
-                            {% endif %}
-                        </tr>
-                    </thead>
-                    {{ these_counts_formset.management_form }}
-                    <tbody>
-                        {% for form in these_counts_formset %}
-                            <tr>
-                                {% for field in form %}
-                                    {% comment %} only render the counted_date if user is admin {% endcomment %}
-                                    {% if field.name == "counted_date" and not user.is_staff %}
-                                        <td data-countrecord-id={{ form.id.value }} style="display:none;" class="tbl-cell-{{ field.name }} text-right">{{ field }}{{ field.errors }}</td>
-                                    {% comment %} center align variance and counted {% endcomment %}
-                                    {% elif field.name == "item_code" %}
-                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right">
-                                            <div class="dropdown">
-                                                <a class="dropdown-toggle itemCodeDropdownLink" type="button" data-bs-toggle="dropdown">{{ field }}</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item partialContainerLabelLink" data-itemcode="{{field.value}}">
-                                                    Partial Container Label
-                                                    </a></li>
-                                                </ul>
-                                                </div>
-                                            {{ field.errors }}
-                                        </td>
-                                    {% elif field.name == "variance" %}
-                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right">{{ field }}{{ field.errors }}</td>
-                                    {% elif field.name == "counted" %}
-                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-center">{{ field }}{{ field.errors }}</td>
-                                    {% elif field.name == "expected_quantity" %}
-                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }}">
-                                            {{ field }}{{ field.errors }}
-                                            <i class="fa fa-refresh qtyrefreshbutton" {% if not user.is_staff %}style="display:none" {% endif %}itemcode={{ form.item_code.value }} correspondingrecordid={{ form.id.value }}></i>
-                                        </td>
-                                    {% comment %} Don't display count_type or collection_id {% endcomment %}
-                                    {% elif field.name == "collection_id" %}
-                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right" style="display:none;">{{ field }}{{ field.errors }}</td>
-                                    {% elif field.name == "count_type" %}
-                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right" style="display:none;">{{ field }}{{ field.errors }}</td>
-                                    {% else %}
-                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }}" correspondingrecordid={{ form.id.value }}>{{ field }}{{ field.errors }}</td>
-                                    {% endif %}
-                                {% endfor %}
-                                {% if user.is_staff %}
-                                    <td class="discardButtonCell text-center noPrint">
-                                        <a class="discardButton noPrint" href="">
-                                            <i class="fa fa-trash" disabled="disabled"></i>
-                                        </a>
-                                    </td>
-                                {% endif %}
-                            </tr>
-                            
-                        {% endfor %}
+        {% comment %} <div class="text-center buttonContainer noPrint">
+            <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save</button>
+        </div>
+        <div class="success-message text-center">
+            <h2 class="fade-out fade-hidden">
+                {% if result == 'success' %}
+                    Counts submitted successfully!
+                {% endif %}
+            </h2>
+        </div> {% endcomment %}
+        {% csrf_token %}
+        <div class="table-responsive-sm">
+            <table class="table text-left table-bordered table-hover" id="countsTable">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col" class="text-center">Item Code</th>
+                        <th scope="col" class="text-center">Description</th>
+                        <th scope="col" class="text-center">Exp. Qty</th>
+                        <th scope="col" class="text-center">Count</th>
                         {% if user.is_staff %}
-                        <tr>
-                            <td colspan="11">
-                                <div id="addBlendButtonContainer" class="buttonContainer noPrint">
-                                    <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCountListItemModal">
-                                        Add Item
+                            <th scope="col" class="noPrint text-nowrap" style="display:flex;">
+                                Count Date
+                                <div class="dropdown">
+                                    <button class="btn dropdown-toggle datechangedropdown" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                     </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <li id="changeDatesButton"><a class="dropdown-item">Change Dates to Today</a></li>
+                                    </ul>
                                 </div>
-                            </td>
-                        </tr>
+                            </th>
                         {% endif %}
-                    </tbody>
-                </table>
-            </div>
-        </form>
+                        <th scope="col" class="noPrint text-center">Variance</th>
+                        <th scope="col" class="noPrint text-center">Approved</th>
+                        <th scope="col" class="noPrint text-center">Comment</th>
+                        <th scope="col" class="noPrint text-center">Zone</th>
+                        <th scope="col" class="noPrint text-center">Location</th>
+                        {% if user.is_staff %}
+                            <th scope="col" class="noPrint text-center text-nowrap">
+                                {% if user.is_staff %}
+                                    <a class="discardButton" id="discardAllButton" href="" style="color:white;border:2px solid white;">
+                                        Delete All
+                                    </a>
+                                {% endif %}
+                            </th>
+                        {% endif %}
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for form in these_counts_formset %}
+                        <tr>
+                            {% for field in form %}
+                                {% comment %} only render the counted_date if user is admin {% endcomment %}
+                                {% if field.name == "counted_date" and not user.is_staff %}
+                                    <td data-countrecord-id={{ form.id.value }} style="display:none;" class="tbl-cell-{{ field.name }} text-right">{{ field }}{{ field.errors }}</td>
+                                {% comment %} center align variance and counted {% endcomment %}
+                                {% elif field.name == "item_code" %}
+                                    <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right">
+                                        <div class="dropdown">
+                                            <a class="dropdown-toggle itemCodeDropdownLink" type="button" data-bs-toggle="dropdown">{{ field }}</a>
+                                            <ul class="dropdown-menu">
+                                                <li><a class="dropdown-item partialContainerLabelLink" data-itemcode="{{field.value}}">
+                                                Partial Container Label
+                                                </a></li>
+                                            </ul>
+                                            </div>
+                                        {{ field.errors }}
+                                    </td>
+                                {% elif field.name == "variance" %}
+                                    <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right">{{ field }}{{ field.errors }}</td>
+                                {% elif field.name == "counted" %}
+                                    <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-center">{{ field }}{{ field.errors }}</td>
+                                {% elif field.name == "expected_quantity" %}
+                                    <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }}">
+                                        {{ field }}{{ field.errors }}
+                                        <i class="fa fa-refresh qtyrefreshbutton" {% if not user.is_staff %}style="display:none" {% endif %}itemcode={{ form.item_code.value }} correspondingrecordid={{ form.id.value }}></i>
+                                    </td>
+                                {% comment %} Don't display count_type or collection_id {% endcomment %}
+                                {% elif field.name == "collection_id" %}
+                                    <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right" style="display:none;">{{ field }}{{ field.errors }}</td>
+                                {% elif field.name == "count_type" %}
+                                    <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right" style="display:none;">{{ field }}{{ field.errors }}</td>
+                                {% else %}
+                                    <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }}" correspondingrecordid={{ form.id.value }}>{{ field }}{{ field.errors }}</td>
+                                {% endif %}
+                            {% endfor %}
+                            {% if user.is_staff %}
+                                <td class="discardButtonCell text-center noPrint">
+                                    <a class="discardButton noPrint" href="">
+                                        <i class="fa fa-trash" disabled="disabled"></i>
+                                    </a>
+                                </td>
+                            {% endif %}
+                        </tr>
+                        
+                    {% endfor %}
+                    {% if user.is_staff %}
+                    <tr>
+                        <td colspan="11">
+                            <div id="addBlendButtonContainer" class="buttonContainer noPrint">
+                                <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCountListItemModal">
+                                    Add Item
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
     </div>
     <br>
     <div id="encodedListDiv" encoded-list="{{ encoded_list }}"></div>
