--- a/app/core/templates/core/inventorycounts/itemsbyauditgroup.html
+++ b/app/core/templates/core/inventorycounts/itemsbyauditgroup.html
@@ -4,7 +4,7 @@
 {% block title %}<title>Select Counts</title>{% endblock %}
 
 {% block scripts %}
-    <link rel="stylesheet" type="text/css" href ="{% static 'core/itemsToCount.css' %}">
+    <link rel="stylesheet" type="text/css" href ="{% static 'core/css/itemsToCount.css' %}">
     <script type="module" src="{% static './core/js/pageModules/itemsToCount.js' %}"></script>
 {% endblock scripts %}
 
