--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -29,7 +29,7 @@
             <table class="table text-left table-bordered table-hover" id="countsTable">
                 <thead class="thead-dark">
                     <tr>
-                        <th scope="col" class="text-center">Item Code</th>
+                        <th scope="col" class="text-center">ItemCode</th>
                         <th scope="col" class="text-center">Description</th>
                         <th scope="col" class="text-center">Exp. Qty</th>
                         <th scope="col" class="text-center">Count</th>
@@ -49,7 +49,6 @@
                         <th scope="col" class="noPrint text-center">Approved</th>
                         <th scope="col" class="noPrint text-center">Comment</th>
                         <th scope="col" class="noPrint text-center">Zone</th>
-                        <th scope="col" class="noPrint text-center">Location</th>
                         {% if user.is_staff %}
                             <th scope="col" class="noPrint text-center text-nowrap">
                                 {% if user.is_staff %}
@@ -62,29 +61,29 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for record in these_count_records %}
+                    {% for item in these_count_records %}
                         <tr>
                             <td data-countrecord-id="{{ item.id }}" class="tbl-cell-item_code text-right">
                                 <div class="dropdown">
-                                    <a class="dropdown-toggle itemCodeDropdownLink" type="button" data-bs-toggle="dropdown"><input type="text" value="{{ item.item_code }}" tabindex="-1" readonly="readonly"></a>
+                                    <a class="dropdown-toggle itemCodeDropdownLink" type="button" data-bs-toggle="dropdown" readonly="readonly">{{ item.item_code }}</a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item partialContainerLabelLink" data-itemcode="{{ item.item_code }}">Partial Container Label</a></li>
                                     </ul>
                                 </div>
                             </td>
-                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-item_description" correspondingrecordid="{{ item.id }}"><input type="text" value="{{ item.item_description }}" tabindex="-1" readonly="readonly"></td>
+                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-item_description" correspondingrecordid="{{ item.id }}">{{ item.item_description }}</td>
                             <td data-countrecord-id="{{ item.id }}" class="tbl-cell-expected_quantity">
-                                <input type="number" value="{{ item.expected_quantity }}" step="0.00001" id="id_form-0-expected_quantity" tabindex="-1">
+                                {{ item.expected_quantity|floatformat:0 }}
                                 <span></span> <i class="fa fa-refresh qtyrefreshbutton" itemcode="{{ item.item_code }}" correspondingrecordid="{{ item.id }}" aria-hidden="true"></i>
                             </td>
-                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-counted_quantity" correspondingrecordid="{{ item.id }}"><input type="number" value="{{ item.id }}" step="0.00001" tabindex="0"></td>
-                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-counted_date noPrint" correspondingrecordid="{{ item.counted_date }}"><input type="text" value="{{ item.id }}" tabindex="-1"></td>
-                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-variance text-right noPrint"><input type="number" value="{{ item.variance }}" step="0.00001" tabindex="-1"></td>
+                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-counted_quantity" correspondingrecordid="{{ item.id }}"><input type="number" value="{{ item.counted_quantity|floatformat:0 }}" step="0.00001" tabindex="0"></td>
+                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-counted_date noPrint" readonly="True" correspondingrecordid="{{ item.id }}">{{ item.counted_date|date:"m/d/y" }}</td>
+                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-variance text-right noPrint">{{ item.variance|floatformat:0 }}</td>
                             <td data-countrecord-id="{{ item.id }}" class="tbl-cell-counted text-center noPrint checkedcountedcell"><input type="checkbox" checked="{{ item.variance }}" tabindex="-1"></td>
                             <td data-countrecord-id="{{ item.id }}" class="tbl-cell-count_type text-right noPrint" style="display:none;"><input type="text" value="{{ item.count_type }}" tabindex="-1"></td>
                             <td data-countrecord-id="{{ item.id }}" class="tbl-cell-collection_id text-right" style="display:none;"><input type="text" value="{{ item.collection_id }}" tabindex="-1"></td>
                             <td data-countrecord-id="{{ item.id }}" class="tbl-cell-comment" correspondingrecordid="{{ item.id }}"><textarea cols="10" rows="1" value="{{ item.comment }}"></textarea></td>
-                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-zone" correspondingrecordid="{{ item.id }}" value="{{ item.zone }}"><select>
+                            <td data-countrecord-id="{{ item.id }}" class="tbl-cell-zone" correspondingrecordid="{{ item.id }}" value="{{ item.zone }}">
                                 <select>
                                     {% for location in location_options %}
                                         <option value="{{ location }}">{{ location }}</option>
